8074844: Resolve disabled warnings for libfontmanager

Reviewed-by: serb, ihse, erikj